@@ -90,6 +90,7 @@ ENABLE_DYNAMIC_LIBSLAB=0
 AM_CONDITIONAL(ENABLE_DYNAMIC_LIBSLAB, test "x$ENABLE_DYNAMIC_LIBSLAB" = "x1")
 
 COMMON_MODULES="gtk+-2.0 >= 2.11.6 dnl
+ gio-2.0 dnl
  gconf-2.0 dnl
  libgnomeui-2.0 >= 2.2.0 dnl
  libglade-2.0 >= 2.0.0 dnl
